--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Medicine/All.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Medicine/All.cshtml
@@ -6,7 +6,7 @@
 <h2>All Medicines</h2>
 <br>
 <p>
-    <a class="btn btn-success" asp-action="Create">Create New Medecine</a>
+    <a class="btn btn-success" asp-action="Create">Create New</a>
 </p>
 <br>
 @{
