--- a/HealthAndCareHospital.Web/Areas/Contact/Views/Contact/All.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Contact/Views/Contact/All.cshtml
@@ -41,10 +41,10 @@
                     @(contact.IsSeen ? "Yes" : "No")
                     </td>
                 <td class="text-center">
-                    <a class="btn btn-success" href="/Contact/Contact/Details/@contact.Id">See Detailed Contact</a>
+                    <a class="btn btn-success" href="/Contact/Contact/Details/@contact.Id">Details</a>
 
 
-                    <a class="btn btn-danger" href="/Contact/Contact/Delete/@contact.Id">Delete Contact</a>
+                    <a class="btn btn-danger" href="/Contact/Contact/Delete/@contact.Id">Delete</a>
                 </td>
             </tr>
         }
