--- a/HealthAndCareHospital.Web/Areas/Contact/Views/Contact/Details.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Contact/Views/Contact/Details.cshtml
@@ -13,6 +13,6 @@
 <p class="white">@Model.Subject</p>
 <br>
 <h3>Message</h3>
-<p> class="white">@Model.Message</p>
+<p class="white">@Model.Message</p>
 <br>
 <a class="btn btn-primary" asp-action="All">Back to List</a>
