--- a/HealthAndCareHospital.Web/Areas/Doctor/Views/Patient/Details.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Doctor/Views/Patient/Details.cshtml
@@ -35,6 +35,8 @@
 </div>
 <div>
     <a class="btn btn-success" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
-    <br>
+</div>
+<br>
+<div>
     <a class="btn btn-primary" asp-action="All">Back to List</a>
 </div>
