--- a/HealthAndCareHospital.Web/Views/Home/Index.cshtml
+++ b/HealthAndCareHospital.Web/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                 <h2 class="white">We care about your healing!</h2>
                 <br>
                 <p>Our specialists are ready to take you<br>to a new level of helthcare!</p>
-                <a href="/home/contact" class="btn btn-appoint">Make an Appointment.</a>
+                <a href="/home/contact" class="btn btn-appoint">Contact Us.</a>
             </div>
             <div class="overlay-detail text-center">
                 <a href="#"><i class="fa fa-angle-up"></i></a>
@@ -123,7 +123,12 @@
                 <h2 class="section-title white lg-line">« A few words<br> about us »</h2>
             </div>
             <div class="col-md-4 col-sm-5">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a typek
+                A multi-specialty quaternary care hospital,
+                it is indeed one of the cornerstones of the healthcare infrastructure in Sofia,
+                setting new benchmarks in quality standards in healthcare delivery.
+                Healt And Care Hospital provides holistic healthcare that includes prevention,
+                treatment, rehabilitation and health education for patients,
+                their families and clients by touching their lives.
                 <p class="text-right text-primary"><i>— Health And Care Hospital</i></p>
             </div>
             <div class="col-md-2"></div>
