--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/All.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/All.cshtml
@@ -5,7 +5,7 @@
 <h2>@ViewData["Title"]</h2>
 <br>
 <div class="col-md-2">
-    <a class="btn btn-success" asp-action="Create">Create Disease</a>
+    <a class="btn btn-success" asp-action="Create">Create New</a>
 </div>
 <br>
 <div class="row">
@@ -47,8 +47,8 @@
                     <a class="btn btn-default" href="/departments/all/">@item.DepartmentName</a>
                 </td>
                 <td>
-                    <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a>
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
