--- a/HealthAndCareHospital.Web/Areas/Doctor/Views/Patient/All.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Doctor/Views/Patient/All.cshtml
@@ -4,12 +4,15 @@
     ViewData["Title"] = "All Patients";
 }
 
-<h2>Index</h2>
+<h2>All Patients</h2>
 <br>
+@if (this.User.IsInRole("Doctor"))
+{
 <p>
     <a class="btn btn-success" asp-action="Create">Create New Patient</a>
 </p>
 <br>
+}
 <table class="table white">
     <thead>
         <tr>
@@ -22,9 +25,13 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Age)
                 </th>
-            <th>
-                Treating Physician
-            </th>
+                @if (this.User.IsInRole("Administrator"))
+                {
+                    <th>
+                        Treating Physician
+                    </th>
+                }
+                
             <th></th>
         </tr>
     </thead>
@@ -40,10 +47,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Age)
             </td>
-            <td>
-                <a class="btn btn-primary" asp-area="Admin" asp-controller="Doctor" 
-                   asp-action="Details" asp-route-id="@item.DoctorId">Doctor</a>
-            </td>
+            @if (this.User.IsInRole("Administrator"))
+            {
+                <td>
+                    <a class="btn btn-primary" asp-area="Admin" asp-controller="Doctor"
+                       asp-action="Details" asp-route-id="@item.DoctorId">Doctor</a>
+                </td>
+            }
+            
             <td>
                 <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a> |
