--- a/HealthAndCareHospital.Web/Views/Home/About.cshtml
+++ b/HealthAndCareHospital.Web/Views/Home/About.cshtml
@@ -2,16 +2,20 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
 <section id="about" class="section-padding">
     <div class="container white">
         <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-12">
                 <div class="section-title">
-                    <h2 class="head-title lg-line">The Medilap <br>Ultimate Dream</h2>
+                    <h2 class="head-title lg-line">Health And Care <br>Ultimate Dream</h2>
                     <hr class="botm-line">
-                    <p class="sec-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
+                    <p class="sec-para">A multi-specialty quaternary care hospital,
+                    it is indeed one of the cornerstones of the healthcare infrastructure in Sofia,
+                    setting new benchmarks in quality standards in healthcare delivery.
+                    Healt And Care Hospital provides holistic healthcare that includes prevention,
+                    treatment, rehabilitation and health education for patients,
+                    their families and clients by touching their lives.</p>
                     <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
                 </div>
             </div>
@@ -21,14 +25,14 @@
                         <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
                         <div class="more-features-box-text-description">
                             <h3>It's something important you want to know.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud.</p>
+                            <p>The hospital with a multidisciplinary approach, latest technology and great expertise, the 100-bedded unit including a 50 bedded surgical unit in the main hospital is geared up to be the ultimate destination of health care in Sofia.</p>
                         </div>
                     </div>
                     <div class="more-features-box-text">
                         <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
                         <div class="more-features-box-text-description">
                             <h3>It's something important you want to know.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud.</p>
+                            <p>Health And Care covers the entire spectrum from illness to wellness and is thus a health city and not a hospital. Institutes for Heart Diseases, Cancer, Joint Diseases, Emergency, Renal Diseases, Neurosciences, Eye and Cosmetic Surgery are all centers of excellence and are positioned to offer the best care in the safest manner to every patient.</p>
                         </div>
                     </div>
                 </div>
