--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -103,7 +103,7 @@
                         </div>
                         <div class="info-sec">
                             <ul class="quick-info">
-                                <li><a href="#"><i class="fa fa-circle"></i>Home</a></li>
+                                <li><a asp-area="" asp-controller="Home" asp-action="Index"><i class="fa fa-circle"></i>Home</a></li>
                                 <li><a href="/departments/all"><i class="fa fa-circle"></i>Services</a></li>
                                 <li><a href="/home/contact"><i class="fa fa-circle"></i>Contact</a></li>
                             </ul>
