--- a/HealthAndCareHospital.Web/Views/Shared/_Layout.cshtml
+++ b/HealthAndCareHospital.Web/Views/Shared/_Layout.cshtml
@@ -63,6 +63,7 @@
                                 @if (!this.User.Identity.IsAuthenticated)
                                 {
                                     <li class="active"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                                    <li class="active"><a asp-area="" asp-controller="Departments" asp-action="All">Departments</a></li>
                                     <li class="active"><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                                     <li class="active"><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                                 }
@@ -103,7 +104,7 @@
                         </div>
                         <div class="info-sec">
                             <ul class="quick-info">
-                                <li><a href="#"><i class="fa fa-circle"></i>Home</a></li>
+                                <li><a asp-area="" asp-controller="Home" asp-action="Index"><i class="fa fa-circle"></i>Home</a></li>
                                 <li><a href="/departments/all"><i class="fa fa-circle"></i>Services</a></li>
                                 <li><a href="/home/contact"><i class="fa fa-circle"></i>Appointment</a></li>
                             </ul>
