--- a/HealthAndCareHospital.Web/Areas/Contact/Views/Contact/Details.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Contact/Views/Contact/Details.cshtml
@@ -8,7 +8,7 @@
 <h3>Name</h3>
 <p class="white">@Model.Name</p>
 <h3>Email</h3>
-<p class="white">@Model.Email</p>
+<p class="white">@Html.DisplayFor(modelItem => Model.Email)</p>
 <h3>Subject</h3>
 <p class="white">@Model.Subject</p>
 <br>
