--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/Details.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/Details.cshtml
@@ -29,6 +29,6 @@
     </dl>
 </div>
 <div>
-    <a class="btn btn-success" asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a class="btn btn-success" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
     <a class="btn btn-primary" asp-action="Index">Back to List</a>
 </div>
