--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/Search.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/Search.cshtml
@@ -38,8 +38,8 @@
                         <a class="btn btn-default" href="/departments/all/">@item.DepartmentName</a>
                     </td>
                     <td>
-                        <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a>
                         <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                     </td>
                 </tr>
