--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Medicine/All.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Medicine/All.cshtml
@@ -64,8 +64,8 @@
                     @(item.Descritption.Substring(0, 10))...
                 </td>
                 <td>
-                    <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a>
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
