--- a/HealthAndCareHospital.Web/Areas/Contact/Views/Contact/All.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Contact/Views/Contact/All.cshtml
@@ -32,7 +32,7 @@
                     @contact.Name
                 </td>
                 <td class="text-center">
-                    @contact.Email
+                    @Html.DisplayFor(modelItem => contact.Email)
                 </td>
                 <td class="text-center">
                     @contact.Subject
