--- a/HealthAndCareHospital.Web/Areas/Doctor/Views/Patient/All.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Doctor/Views/Patient/All.cshtml
@@ -56,8 +56,8 @@
             }
             
             <td>
-                <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a>
                 <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
