--- a/HealthAndCareHospital.Web/Views/Departments/DoctorDetails.cshtml
+++ b/HealthAndCareHospital.Web/Views/Departments/DoctorDetails.cshtml
@@ -21,7 +21,7 @@
                     <div class="caption">
                         <h3>@Model.Name</h3>
                         <p>@Model.Speciality</p>
-                        <p>@Model.Email</p>
+                        <p>@Html.DisplayFor(modelItem => Model.Email)</p>
                     </div>
                 </div>
             </div>
