A couple of view changes

--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/Delete.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/Delete.cshtml
@@ -34,6 +34,6 @@
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-default" />
         <br>
-        <a class="btn btn-primary" asp-action="Index">Back to List</a>
+        <a class="btn btn-primary" asp-action="All">Back to List</a>
     </form>
 </div>
