--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/Details.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/Details.cshtml
@@ -30,5 +30,5 @@
 </div>
 <div>
     <a class="btn btn-success" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
-    <a class="btn btn-primary" asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="All">Back to List</a>
 </div>
