--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/Edit.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/Edit.cshtml
@@ -33,7 +33,7 @@
     </div>
 </div>
 <div>
-    <a class="btn btn-primary" asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="All">Back to List</a>
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
