--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Doctor/Create.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Doctor/Create.cshtml
@@ -45,7 +45,7 @@
 </div>
 <br>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="All">Back to List</a>
 </div>
 
 @section Scripts {
