--- a/HealthAndCareHospital.Web/Views/Account/Login.cshtml
+++ b/HealthAndCareHospital.Web/Views/Account/Login.cshtml
@@ -43,7 +43,7 @@
                         <a asp-action="ForgotPassword">Forgot your password?</a>
                     </p>
                     <p>
-                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a>
+                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Don't have account yet? Register here.</a>
                     </p>
                 </div>
             </form>
